--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="bootstrap-5.2.1-dist/css/bootstrap.css">
 </head>
 <body>
-    <script src="bootstap.js"></script>
+    <script src="bootstrap-5.2.1-dist/js/bootstrap.js"></script>
 </body>
 </html>
