--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
           </div>
         </div>
       </nav>
-      <h1 style="text-align: center;">Contact Us</h1>
+      <h1 class="text-center">Contact Us</h1>
     </header>
     <main>
 
