--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
               </div>
             </div>
           </nav>
-          <h1 style="text-align: center;">Home Page</h1>
+          <h1 class="text-center">Home Page</h1>
     </header>
    <main>
-
+    
    </main>
     <script src="bootstrap-5.2.1-dist/js/bootstrap.js"></script>
 </body>
