--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
               </div>
             </div>
           </nav>
-          <h1 style="text-align: center;">About us</h1>
+          <h1 class="text-center">About Us</h1>
     </header>
     <main>
         <p></p>
