--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h1 class="text-center">Home Page</h1>
     </header>
    <main>
-    
+    <img src="bootstrap-5.2.1-dist/picture.jpg" class="img-fluid" alt="">
    </main>
     <script src="bootstrap-5.2.1-dist/js/bootstrap.js"></script>
 </body>
