--- a/about.html
+++ b/about.html
@@ -34,8 +34,13 @@
           <h1 class="text-center">About Us</h1>
     </header>
     <main>
-        <p></p>
-    </main>
+        <p class="text-center">A little about myself: </p>
+        <ul class="text-center">
+        <li class="text-center">Personal background:I was born in Costa Rica, moved to Lincolnton, NC. Moved to Charlotte in 2014 and been living here since. Currently own 2 crazy dogs named Koda and Bailey.</li>
+        <li class="text-center">Professional background: First job in Charlotte was at T-Mobile, currently working full-time for Atrium Health as a Technical Analyst</li>
+        </ul>
+        <a href="" target="_blank">Go to my Repo here</a>
+      </main>
     <script src="bootstrap-5.2.1-dist/js/bootstrap.js"></script>
 </body>
 </html>
