--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         <li class="text-center">Personal background:I was born in Costa Rica, moved to Lincolnton, NC. Moved to Charlotte in 2014 and been living here since. Currently own 2 crazy dogs named Koda and Bailey.</li>
         <li class="text-center">Professional background: First job in Charlotte was at T-Mobile, currently working full-time for Atrium Health as a Technical Analyst</li>
         </ul>
-        <a class="text-center" href="" target="_blank">Go to my Repo here</a>
+        <a href="" target="_blank">Go to my Repo here</a>
       </main>
     <script src="bootstrap-5.2.1-dist/js/bootstrap.js"></script>
 </body>
