--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
     <main>
         <p class="text-center">A little about myself: </p>
         <ul class="text-center">
-        <li class="text-center">Personal background:I was born in Costa Rica, moved to Lincolnton, NC. Moved to Charlotte in 2014 and been living here since. Currently own 2 crazy dogs named Koda and Bailey.</li>
-        <li class="text-center">Professional background: First job in Charlotte was at T-Mobile, currently working full-time for Atrium Health as a Technical Analyst</li>
+        <li class="text-center">My hobbies include soccer, snowboarding, poker, and cooking</li>
+        
         </ul>
         <a href="https://github.com/ksolera/BootStrap-assignment" target="_blank">Go to my Repo here</a>
       </main>
