--- a/about.html
+++ b/about.html
@@ -7,6 +7,11 @@
     <meta name="viewport">
     <title>Document</title>
     <link rel="stylesheet" href="bootstrap-5.2.1-dist/css/bootstrap.css">
+    <style>
+      .center {
+        text-align: center;
+      }
+    </style>
 </head>
 <body>
     <header>
@@ -39,7 +44,10 @@
         <li class="text-center">My hobbies include soccer, snowboarding, poker, and cooking</li>
         
         </ul>
-        <a href="https://github.com/ksolera/BootStrap-assignment" target="_blank">Go to my Repo here</a>
+        <div>
+
+        </div>
+                      <a class="center" href="https://github.com/ksolera/BootStrap-assignment" target="_blank">Go to my Repo here</a>
       </main>
     <script src="bootstrap-5.2.1-dist/js/bootstrap.js"></script>
 </body>
