--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="bootstrap-5.2.1-dist/css/bootstrap.css">
 </head>
-<body>
+<body class="p-3 mb-2 bg-info text-dark">
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
